# rllm

./: .gitignore  README.md  pyproject.toml
docs/: design.md  learn-path.md
examples/: qwen3_smoke.py  tiny_grpo_rule.py  train_qwen3_arithmetic_grpo.py  train_qwen3_gsm8k_grpo.py
examples/data/: arithmetic_rlvr.jsonl
src/rllm/: __init__.py
src/rllm/algorithms/: __init__.py  grpo.py  ppo.py
src/rllm/core/: __init__.py  identity.py  interfaces.py  types.py
src/rllm/diagnostics/: __init__.py  hidden_states.py  logprobs.py
src/rllm/models/: __init__.py  hf.py  torch_causal_lm.py
src/rllm/rewards/: __init__.py  rule.py
src/rllm/rollouts/: __init__.py  local.py
src/rllm/trainers/: __init__.py  grpo.py
src/rllm/utils/: __init__.py  logprobs.py
tests/: __init__.py  test_grpo.py  test_gsm8k_example.py  test_hidden_state_diagnostics.py  test_identity.py  test_logprob_diagnostics.py  test_logprobs.py  test_ppo.py  test_rollout.py  test_trainer_grpo.py
